Fix layout issues

--- a/desktop/src/entry/App.sass
+++ b/desktop/src/entry/App.sass
@@ -1,7 +1,9 @@
 @import "../util/sass-variables";
 
 .app
+    position: relative
     width: 100vw
+    min-width: $app-min-width
     height: 100vh
     background-color: $app-background-color
     color: $app-text-color
