--- a/desktop/src/pages/twitch/TwitchPage.sass
+++ b/desktop/src/pages/twitch/TwitchPage.sass
@@ -2,7 +2,12 @@
 $table-cell-width: 100px
 
 .page
-    padding: 10px
+    width: 100%
+    min-width: $app-min-width
+    background-color: $app-background-color
+
+    .page-content
+        padding: 10px
     
 .authenticated-actions
     button
@@ -65,7 +70,7 @@ $table-cell-width: 100px
 
 .modal
     position: relative
-    width: 600px
+    width: 550px
     min-height: 300px
     max-height: 600px
     overflow-x: hidden
